--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,11 @@
 # Base de datos PostgreSQL
-# En Render, esto será proporcionado automáticamente si usas PostgreSQL de Render
-DB_HOST=your_database_host
-DB_PORT=5432
-DB_NAME=your_database_name
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
+# Render proporciona DATABASE_URL automáticamente cuando conectas una base de datos
+# Para desarrollo local, usa STRING_CONEXION_BD con el formato:
+# postgresql://usuario:contraseña@host:puerto/nombre_base_datos
+STRING_CONEXION_BD=postgresql://user:password@localhost:5432/database_name
+
+# En Render, esta variable se genera automáticamente:
+# DATABASE_URL=postgresql://user:password@host:port/database
 
 # JWT
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
